--- a/styles.css
+++ b/styles.css
@@ -32,12 +32,15 @@ body {
 .button-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    margin: 5px;
     
 }
 
-
+.operand.zero{
+    flex-grow: 1;
+}
 
 button {
     height: 50px;
