--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
     align-content: center;
     height: 784px;
     flex-wrap: wrap;
+    background-color: rgb(217, 253, 253) ;
 
 }
 
@@ -15,6 +16,7 @@ body {
     width: 280px;
     padding: 10px;
     border-radius: 10px;
+    background-color: rgb(239, 239, 235);
 }
 
 .screen {
