--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     align-content: center;
     height: 784px;
     flex-wrap: wrap;
-    background-color: rgb(217, 253, 253) ;
+    background-color: azure ;
 
 }
 
@@ -12,11 +12,11 @@ body {
     border: 2px solid  black;
     display: flex;
     flex-direction: column;
-    height: 380px;
     width: 280px;
     padding: 10px;
     border-radius: 10px;
     background-color: rgb(239, 239, 235);
+    
 }
 
 .screen {
@@ -28,7 +28,8 @@ body {
     justify-content: flex-end;
     margin: 10px;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 40px;
+    text-shadow: 1.3px 1.3px #383838;
     background-color: rgb(224, 229, 233);
 }
 
@@ -46,18 +47,29 @@ body {
 }
 
 button {
-    height: 50px;
-    width: 50px;
+    height: 55px;
+    width: 55px;
     margin: 5px;
     font-size: 18px;
     border-color: white;
+    border-radius: 4px;
+}
+
+button:hover{
+    background-color: #434348; /* Green */
+    color: rgb(255, 255, 255);
 }
 
 .operator, .pos_neg, .percent {
     color: green;
+
 }
 
-.delete {
+.operator:focus {
+    background-color: #9c9c9c;
+}
+
+.clear {
     color: brown;
 }
 
